feat(custom-bots): limit accounts to one User Bot
